# Argus

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  RESULTS.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
crates/argus-cli/: Cargo.toml
crates/argus-cli/src/: main.rs
crates/argus-core/: Cargo.toml
crates/argus-core/benches/: core_benchmarks.rs
crates/argus-core/src/: covariance.rs  error.rs  lib.rs  math.rs  risk_policy.rs  types.rs
crates/argus-core/tests/: test_math_props.rs
crates/argus-ffi/: Cargo.toml
crates/argus-ffi/src/: lib.rs
crates/argus-ingest/: Cargo.toml
crates/argus-ingest/src/: adapter.rs  arena.rs  equity.rs  lib.rs  runtime.rs  schema.rs
examples/: equity_only_demo.py  macro_conditioned_factor_model.py  multi_asset_universe.py
python/argus/: __init__.py  client.py  registry.py  schema.py
python/argus/adapters/: __init__.py  crypto_ccxt.py  macro_fred.py  protocol.py
tests/python/: conftest.py  test_crypto_adapter.py  test_engine_e2e.py  test_ffi_boundary.py  test_macro_adapter.py  test_schema.py
